# Varta

./: README.md  package.json  tailwind.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001-init.sql
src-tauri/src/: error.rs  http.rs  lib.rs  main.rs  models.rs  rest.rs  state.rs
src-tauri/src/commands/: collections.rs  environments.rs  mod.rs  settings.rs  workspaces.rs
src-tauri/src/db/: app_state.rs  collections.rs  environments.rs  history.rs  mod.rs  plugins.rs  settings.rs  themes.rs  workspaces.rs
src/components/: CommandPalette.tsx  EmptyState.tsx  EnvironmentEditor.tsx  EnvironmentModal.tsx  HistoryDrawer.tsx  HttpClient.tsx  SettingsPanel.tsx
src/components/RequestEditor/: AuthTab.tsx  BodyTab.tsx  CookiesTab.tsx  KeyValueTable.tsx  RequestBar.tsx  TabStrip.tsx  index.tsx
src/components/ResponsePanel/: index.tsx
src/components/Sidebar/: CollectionTree.tsx  EnvironmentSelector.tsx  FolderNodeItem.tsx  RequestItem.tsx  WorkspaceSelector.tsx  index.tsx
src/data/: mock.ts
src/hooks/: useKeyboardShortcuts.ts  useMobileDetect.ts  useResizablePanel.ts
src/services/: rest.ts
