[package]
name = "varta"
version = "0.1.4"
description = "A Tauri App"
authors = ["Hrithik Dhakrey <dhakreyhrithik@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "varta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.13.4", features = ["json", "multipart", "query", "form", "native-tls"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.3", features = ["v4"] }
url = "2.5.8"
thiserror = "2.0.18"
chrono = "0.4.45"
websocket = { version = "0.27.1", features = ["native-tls"] }

[profile.release]
codegen-units = 1

[features]
default = []
scripting = []
